--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Hello World</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<title> Hello</title>
+</header>
+<body>
+  <h1>Hello World</h1>
+</body>
+
+
+
